tools/rust-parser/tests/fixtures/negative/nested-import.tree
\p{before \import{foundation} after}
